Insert Html Comments into practice blog.

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -12,10 +12,14 @@
         <p>Lorem Ipsum Generated Text.</p>
         <p>Lorem ipsum dolor sit amet, <strong>Insert strong sentence here</strong> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
+        <!-- Insert an html comment here -->
+
         <h2>Second section of my practice blog</h2>
         <p>Second Lorem Ipsum Generated Text.</p>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <em>Insert em sentence here.</em> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+        <!-- Insert another html comment here -->
+        
         <h2>End of Practice Blog</h2>
     </body>
 </html>
